--- a/public/css/templatemo-video-catalog.css
+++ b/public/css/templatemo-video-catalog.css
@@ -206,10 +206,10 @@ h2, p { color: #666666; }
 }
 
 .tm-page-title { font-size: 2.5rem; }
-.tm-catalog-item-list { justify-content: space-between; }
+.tm-catalog-item-list { justify-content: start;}
 
 .tm-catalog-item {
-    max-width: 462px;
+    max-width: 470px;
     display: flex;
     flex-direction: column;
     margin-bottom: 64px;
@@ -229,7 +229,7 @@ h2, p { color: #666666; }
     justify-content: center;
     background-color: rgba(0,0,0,0.4);
     cursor: pointer;
-    transition: all 0.3s ease: ;
+    transition: all 0.3s ease;
 }
 
 .tm-overlay-icon {
