--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -29,7 +29,7 @@ https://templatemo.com/tm-552-video-catalog
 					<div class="row mt-3 pb-1">
 						<div class="col-12">
 							<div class="mx-auto tm-about-text-container px-3">
-								<h2 class="tm-page-title tm-text-primary text-center">Add New Photo</h2>
+								<h2 class="tm-page-title tm-text-primary text-center">Edit your Photo</h2>
                     <p>
                         Integer sit amet odio id libero tincidunt dignissim in eget arcu. Aliquam tristique ut magna sit amet tincidunt. 
                         Sed tempor tellus nulla, molestie luctus lectus tincidunt id. You are <u>not allowed</u> to re-distribute the template 
@@ -41,15 +41,15 @@ https://templatemo.com/tm-552-video-catalog
               <div class="mx-auto pb-3 tm-about-text-container px-3">
                   <div class="row">
                       <div class="col-lg-12 mb-5">
-                          <form method="POST" action="/photos" class="tm-contact-form" encType="multipart/form-data">
+                          <form method="POST" action="/photos/<%= photoObject._id %>?_method=PUT" class="tm-contact-form" encType="multipart/form-data">
 
                             <div class="form-group">
-                              <input type="text" name="title" class="form-control rounded-0" placeholder="Title" required>
+                              <input type="text" name="title" value="<%= photoObject.title %>" class="form-control rounded-0" placeholder="Title" required>
                             </div>
 
                             <div class="form-group">
-                              <textarea rows="8" name="description" class="form-control rounded-0" placeholder="Photo Description"
-                                        required></textarea>
+                              <textarea rows="8" name="description"  class="form-control rounded-0" placeholder="Photo Description"required><%= photoObject.description %>
+                            </textarea>
                             </div>
 
                             <div class="form-group">
@@ -58,7 +58,7 @@ https://templatemo.com/tm-552-video-catalog
 
                             <div class="form-group">
                               <button type="submit" class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit">
-                                <span>Upload</span>
+                                <span>Update</span>
                               </button>
                             </div>
                           </form>    
@@ -69,10 +69,8 @@ https://templatemo.com/tm-552-video-catalog
 				<div class="parallax-window parallax-window-2" data-parallax="scroll" data-image-src="img/contact-2.jpg"></div>
 			</div>
 		</main>
-		<div class="container-fluid tm-content-container mx-auto pt-4">
-         
+		<div class="container-fluid tm-content-container mx-auto pt-4">   
             <%- include('partials/_footer.ejs') -%>
-
     <script src="js/parallax.min.js"></script>    
 </body>
 </html>
